sumo/tests/traci/SlowDown/InvalidTimeInterval/options.traci
sumo.exe --net-file net.net.xml --route-files routes.rou.xml --penetration 1.0 --remote-port 8823 --netstate-dump netstate_dump.xml TraCITestClient.exe -def slowdown_invalidinterval.prog -p 8823 -h localhost -o testclient_out.txt